# GreenTransferScheduler

./: .gitignore  Dockerfile  Em2024DatasetBuilder.ipynb  Paper_Graphs_in_Order.ipynb  README.md  TestModels.ipynb  requirements.txt  schedule_jobs.ipynb  schedule_visualization.ipynb  setup.sh  visualize_jobs.ipynb
config/: associations_df.csv  forecasts_config.json  jobs.json  nodes_config.json  trace_route_with_coordinates.json
data/: associations_df.csv  energy_consumption_jgoldverg@gmail.com-cali_1_.json  energy_consumption_jgoldverg@gmail.com-cali_2_.json  energy_consumption_jgoldverg@gmail.com-cali_3_.json  energy_consumption_jgoldverg@gmail.com-cali_4_.json  energy_consumption_jgoldverg@gmail.com-cali_5_.json  energy_consumption_jgoldverg@gmail.com-cali_6_.json  energy_consumption_jgoldverg@gmail.com-cali_8_.json  energy_consumption_jgoldverg@gmail.com-cali_9_.json  energy_consumption_jgoldverg@gmail.com-ccuc_1_.json  energy_consumption_jgoldverg@gmail.com-ccuc_4_.json  energy_consumption_jgoldverg@gmail.com-ccuc_5_.json  energy_consumption_jgoldverg@gmail.com-ccuc_6_.json  energy_consumption_jgoldverg@gmail.com-ccuc_7_.json  energy_consumption_jgoldverg@gmail.com-ccuc_8_.json  energy_consumption_jgoldverg@gmail.com-ccuc_9_.json  energy_consumption_jgoldverg@gmail.com-tacc_2_.json  energy_consumption_jgoldverg@gmail.com-tacc_3_.json  energy_consumption_jgoldverg@gmail.com-tacc_4_.json  energy_consumption_jgoldverg@gmail.com-tacc_5_.json  energy_consumption_jgoldverg@gmail.com-tacc_6_.json  (+153 more)
network_env/: CMakeLists.txt  JsonParser.cpp  point_to_point_example.cc
(+140 files in other folders)
